force-app/main/default/objects/Job_Opening__c/fields/Closing_date__c.field-meta.xml
<CustomField>
    <fullName>Closing_date__c</fullName>
    <label>Closing date</label>
    <type>Date</type>
</CustomField>