force-app/main/default/objects/Job_Opening__c/fields/Total_Child_Salary__c.field-meta.xml
<CustomField>
    <fullName>Total_Child_Salary__c</fullName>
    <label>Total Child Salary</label>
    <summarizedField>Candidates__c.Salary__c</summarizedField>
    <summaryForeignKey>Candidates__c.Job_Opening__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>