force-app/main/default/objects/Job_Opening__c/validationRules/Budgt_control.validationRule-meta.xml
<ValidationRule>
    <fullName>Budgt_control</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Child_Salary__c &gt; Salary__c</errorConditionFormula>
    <errorMessage>Salary limit exceed</errorMessage>
</ValidationRule>