force-app/main/default/objects/Job_Opening__c/validationRules/Check_for_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Location</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Location__c)</errorConditionFormula>
    <errorMessage>Please provide a value for Location field</errorMessage>
</ValidationRule>