force-app/main/default/objects/Job_Opening__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Technology__c</columns>
    <columns>Salary__c</columns>
    <columns>Total_Child_Salary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>